# npr-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.rst  references.txt
res/scenes/: README.md
res/scenes/face/: face.mtl
res/scenes/lego/: lego obj.mtl
res/scenes/sponza/: copyright.txt  sponza.mtl
res/sponza/: sponza.mtl
res/textures/: README.md
shaders/: strokeGen.frag  strokeGen.geom  strokeGen.vert
shaders/EDAF80/: binormal.frag  binormal.vert  celestial_ring.frag  default.frag  diffuse.frag  diffuse.vert  normal.frag  normal.vert  tangent.frag  tangent.vert  texcoord.frag  texcoord.vert
shaders/EDAN35/: accumulate_lights.frag  accumulate_lights.vert  fill_gbuffer.frag  fill_shadowmap.frag  fill_shadowmap.vert  render_light_cones.frag  render_light_cones.vert  resolve_deferred.frag
shaders/NPR/: fill_gbuffer.frag  fill_gbuffer.geom  fill_gbuffer.vert  resolve_sketch.frag  resolve_sketch.vert  silhouette.frag  silhouette.geom  silhouette.vert
shaders/common/: basis.frag  basis.vert  fallback.frag  fallback.vert  fullscreen.frag
src/EDAN35/: assignment2.cpp
src/app/: CMakeLists.txt  nprr.cpp  nprr.hpp  parametric_shapes.cpp  parametric_shapes.hpp
src/core/: helpers.cpp  helpers.hpp
